# bugzilla-dashboard

./: .gitignore  .neutrinorc.js  .snyk  .travis.yml  Auth.md  README.md  lerna.json  netlify.toml  package-lock.json  package.json  pyproject.toml
apps/functions/: .neutrinorc.js  package.json
apps/functions/src/: index.js
apps/server/: .neutrinorc.js  deploy.sh  package.json
apps/server/src/: checkJwt.js  index.js  schema.js
apps/ui/: .eslintignore  .neutrinorc.js  deploy.sh  package.json  webpack.config.js
apps/ui/src/: advancedQueriesToFields.js  bugSearch.graphql  reports.graphql
apps/utils/: .neutrinorc.js  package.json
apps/utils/src/: buildGraph.js
backend/: README.md  manage.py
backend/bug_mgmt/api/: urls.py  views.py
backend/bug_mgmt/org/: admin.py  models.py  serializers.py
backend/bug_mgmt/project/: settings.py  (+2 more)
scripts/: generateTriageOwners.js  processPeopleFile.py
src/: App.jsx  config.js  teamsConfig.js
src/App/: index.jsx  routes.jsx
src/components/: utils.js
src/static/: fakeOrg.json  triageOwners.json
src/utils/: artifacts.js  getAllFakeReportees.js  getAllReportees.js  getBugzillaComponentLink.js  getBugzillaComponents.js  getBugzillaOwners.js  getFakeReportees.js  getOrgChart.js  loadable.jsx  toDayOfWeek.js  toMondayOfWeek.js
test/components/: BugzillaComponentDetails.test.jsx  BugzillaComponents.test.jsx  DrilldownIcon.test.jsx  Header.test.jsx  MainView.test.jsx  PersonDetails.test.jsx  Reportees.test.jsx
test/mocks/: bugzillaComponents.js  partialOrg.js
test/utils/: toDayOfWeek.test.js  toMondayOfWeek.test.js
(+83 files in other folders)
